// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > snapshots > should match snapshot IF errors are present 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="5a79934212ac9d6514f7c998f8d1558bbf75a92d"
  >
    Login
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="login"
      class="cwa-block cwa-w-full cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="5a79934212ac9d6514f7c998f8d1558bbf75a92d"
      name="login"
      type="text"
    />
    <div>
      
      <warning-stub
        class="cwa-mt-2"
      >
        Login should be minimum 6 characters long
      </warning-stub>
      <warning-stub
        class="cwa-mt-2"
      >
        Login cannot contain whitespaces
      </warning-stub>
      
    </div>
  </div>
</div>
`;

exports[`InputField > snapshots > should match snapshot IF input is marked as required 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="c3a335b771d649e59f7bd414f8737a391ff5e271"
  >
    Login
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="login"
      class="cwa-block cwa-w-full cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="c3a335b771d649e59f7bd414f8737a391ff5e271"
      name="login"
      required=""
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputField > snapshots > should match snapshot IF input is of type password 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="ac3cdb342f7d015da525e6e7c8e81ce0d7bbf3b3"
  >
    Password
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="password"
      class="cwa-block cwa-w-full cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="ac3cdb342f7d015da525e6e7c8e81ce0d7bbf3b3"
      name="password"
      type="password"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputField > snapshots > should match snapshot with passed content 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="009628b43238338220f2c2af55217d73c7163999"
  >
    Login
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="login"
      class="cwa-block cwa-w-full cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="009628b43238338220f2c2af55217d73c7163999"
      name="login"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;
